# spatial_plane_simulation

./: .gitignore  CMakeLists.txt  LICENSE  README.md  app.cpp  app.h  core.cpp  core.h  main.cpp  shader.h
glsl/: fragment.glsl  vertex.glsl
